--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,11 @@
 name: time_range_picker
-description: A new Flutter package project.
-version: 0.0.1
-author:
-homepage:
+description: A time range picker for flutter.
+version: 1.0.0
+author: Chris1234567899
+homepage: https://github.com/Chris1234567899/flutter_time_range_picker
+repository: https://github.com/Chris1234567899/flutter_time_range_picker
+issue_tracker: https://github.com/Chris1234567899/flutter_time_range_picker/issues
+
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
